api review comments